--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> Music</title>
-        <link rel="stylesheet" href="C:/Users/Siddharth Pun/OneDrive/Desktop/project 1/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Music</h1>
@@ -10,10 +10,10 @@
     <button onclick="playSong('www.drive.google.com/uc?export=download&id=1hza5c1Ja4nor1TcCganbB7uONBc4iGFh', type='audio/mpeg')">Play Song 2</button>
     <!-- Add more buttons here -->
     <button onclick="playSong('drive.google.com/file/d/1hza5c1Ja4nor1TcCganbB7uONBc4iGFh/view')">Play Song 3</button>
-    <button onclick="playSong('github.com/Siddharthpun1512/my-music/blob/main/itana%20na%20tu.mp3')">Play Song 4</button>
+    <button onclick="playSong('itana na tu.mp3')">Play Song 4</button>
   </div>
   <audio id="audioPlayer" controls></audio>
  script src="C:/Users/Siddharth Pun/OneDrive/Desktop/project 1/test.js"></script>
- <script src="C:/Users/Siddharth Pun/OneDrive/Desktop/project 1/soundjs.js"></script>
+ <script src="soundjs.js"></script>
     </body>
   </html>
