--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <body>
         <h1>Music</h1>
   <h1> My </h1>
-  <div class="playlist"><button onclick="playSong('C:/Users/Siddharth Pun/OneDrive/Desktop/project 1/sound/FAQEER - Vinum Kaushal - Turban Beats - Harry Kahlon - New Punjabi Song (OFFICIAL VIDEO).mp3')">Play Song 1</button>
-    <button onclick="playSong('www.drive.google.com/uc?export=download&id=1hza5c1Ja4nor1TcCganbB7uONBc4iGFh', type='audio/mpeg')">Play Song 2</button>
+  <div class="playlist"><button onclick="playSong('Sound1.mp3')">Play Song 1</button>
+    <button onclick="playSong('Sound2.m4a')">Play Song 2</button>
     <!-- Add more buttons here -->
     <button onclick="playSong('drive.google.com/file/d/1hza5c1Ja4nor1TcCganbB7uONBc4iGFh/view')">Play Song 3</button>
     <button onclick="playSong('itana na tu.mp3')">Play Song 4</button>
