--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1> My </h1>
   <div class="playlist"><button onclick="playSong('Sound1.mp3')">Play Song 1</button>
     <button onclick="playSong('Sound2.m4a')">Play Song 2</button>
-      <button oneclick="playsong('drive.google.com/file/d/1hza5c1Ja4nor1TcCganbB7uONBc4iGFh/view')">google d</button>
+      <button oneclick="playsong('https//drive.google.com/file/d/1hza5c1Ja4nor1TcCganbB7uONBc4iGFh/view')">google d</button>
     <!-- Add more buttons here -->
     <button onclick="playSong('test1.mp3')">Play Song 3</button>
     <button onclick="playSong('itana na tu.mp3')">Play Song 4</button>
